src/test/deca/syntax/invalid/inst/test_inst_if_without_parent.deca
// Description:
//    tests de programme syntaxiquement incorrects : if sans parenthese
//
// Resultats:
//    Ligne 13: mismatched input '{' expecting '('
//    
//
// Historique:
//    cree le 01/01/2024

{
        int i = 0;
        if {
                println("Hello World!");
                i = i + 1;
        }
        
}
